--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,18 @@ header h1 {
   font-weight: 900;
 }
 
+.button {
+    position: absolute;
+    top:50%;
+    background-color:#0a0a23;
+    color: #fff;
+    border-color:#ffffff
+    border-radius:10px; 
+    padding:15px;
+    min-height:30px; 
+    min-width: 120px;
+  }
+
 #container3D canvas {
   width: 100vw !important;
   height: 100vh !important;
