--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,14 @@ header h1 {
 .button {
     position: absolute;
     top:50%;
-    background-color:#0a0a23;
+    left:50%;
+    background-color:#000;
     color: #fff;
     border-color:#ffffff
     border-radius:10px; 
     padding:15px;
-    min-height:30px; 
-    min-width: 120px;
+    min-height:150px; 
+    min-width: 300px;
   }
 
 #container3D canvas {
