--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,19 @@ header h1 {
 .button {
     position: absolute;
     top:50%;
-    left:50%;
+    left:20%;
     background-color:#000;
     color: #fff;
-    border-color:#ffffff
+    border:none; 
     border-radius:10px; 
     padding:15px;
     min-height:150px; 
     min-width: 300px;
+  }
+
+.button:hover {
+      background-color:#002ead;
+      transition: 0.7s;
   }
 
 #container3D canvas {
