--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header h1 {
 .button {
     padding: 25px 30px;
     background-color: #050801;
+    left: 20%
     color: #03e9f4;
     font-weight: bold;
     border: none;
