--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ header h1 {
     left: 50%;
     color: #03e9f4;
     font-weight: bold;
+    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
     border: none;
     border-radius: 5px;
     letter-spacing: 4px;
